--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
     "method-override": "^3.0.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.20.0",
     "nanoid": "^5.1.6",
     "nodemon": "^3.1.11",
